Fixed alignment

--- a/clients/src/App.css
+++ b/clients/src/App.css
@@ -3,6 +3,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 body {
