--- a/clients/src/styles/navbarstyles.css
+++ b/clients/src/styles/navbarstyles.css
@@ -4,7 +4,6 @@
     align-items: center; 
     height: 60px;
     padding: 40px;
-    padding-right: 0px;
   }
 
   .logo img {
@@ -12,4 +11,10 @@
     max-width: 100%; 
     height: 250px;
     width: 250px;
+  }
+
+  @media (max-width: 480px) {
+   .navbar {
+    padding-left: 85px;
+   }
   }
